.circleci/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction-app-web
  labels:
    app: prediction-app-web
  namespace: prices-predict
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: prediction-app
      role: web
  template:
    metadata:
      labels:
        app: prediction-app
        role: web
    spec:
      securityContext:
        runAsGroup: 0
        runAsUser: 0
      containers:
        - name: prediction-app
          image: ovimihai/cdond-ml-microservice
          ports:
            - name: gunicorn
              containerPort: 80
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          readinessProbe:
            initialDelaySeconds: 30
            httpGet:
              port: gunicorn
              path: /
          livenessProbe:
            initialDelaySeconds: 30
            exec:
              command:
                - /bin/bash
                - -c
                - "pidof -x python3"
