.circleci/k8s/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-app-loadbalancer
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
#    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  namespace: prices-predict
spec:
  type: LoadBalancer
  selector:
    app: prediction-app-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
