.circleci/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prices-predict-web
  namespace: prices-predict
spec:
  selector:
    app: prices-predict
    role: web
  ports:
    - name: http
      port: 80
      targetPort: gunicorn
