.circleci/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prediction-app-ingress
  labels:
    app: prediction-app-ingress
  namespace: prices-predict
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prediction-app-web
                port:
                  name: gunicorn
